--- a/en/modules/userguide/pages/Home.adoc
+++ b/en/modules/userguide/pages/Home.adoc
@@ -10,6 +10,8 @@ Intro text
 
 Some text
 
+There will be a tooltip on the word "VM" because the tooltip script auto-detects that word.
+
 
 
 [.tab, id="Another Tab"]
